Added content for the first 3 dinner recipies

--- a/dinner-recipies.html
+++ b/dinner-recipies.html
@@ -44,38 +44,142 @@
                 <div class="dinner-container" id="dinner-row">
                     <aside class="pesto-gnocchi" id="recipe-item">
                         <h2>Gnocchi with crispy bacon and spinach pesto</h2>
-                        <img src="./assets/images/gnocchi_with_crispy_19660_16x9.jpg" alt="An image of a bowl of pesto gnocci.">
+                        <img src="./assets/images/gnocchi_with_crispy_19660_16x9.jpg" alt="">
                         <input type="checkbox" id="expand-checkbox-pesto-gnocchi">
                         <div class="recipe-content-pesto-gnocchi">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, voluptate enim eos,
-                                non soluta inventore, labore quod ex id ab odit corporis impedit! Ullam esse incidunt,
-                                ex pariatur non laboriosam.</p>
+                            <p>Gnocchi makes an easy-peasy 10-minute dinner. It's so simple to give homemade pesto a
+                                healthy boost using fresh spinach.</p>
+                            <p>For this recipe you will need a mini food processor or a blender. Each serving provides
+                                631 kcal, 17g protein, 74g carbohydrates (of which 1g sugars), 28g fat (of which 10.5g
+                                saturates), 6g fibre and 3.3g salt.</p>
+                            <h3>Ingredients</h3>
+                            <ul>
+                                <li>15g/½oz fresh basil</li>
+                                <li>30g/1oz baby spinach</li>
+                                <li>1 tbsp freshly grated Parmesan (or alternative vegetarian hard cheese)</li>
+                                <li>2–3 tbsp extra virgin olive oil</li>
+                                <li>1 lemon, juice only</li>
+                                <li>140g/5oz bacon, cut into small pieces </li>
+                                <li>500g pack potato gnocchi</li>
+                                <li>large pinch sea salt</li>
+                            </ul>
+                            <h3>Method</h3>
+                            <ol>
+                                <li>To make the pesto, put the basil, spinach, Parmesan, salt and half the olive oil in
+                                    a blender or mini food processor and blend. Keep adding oil, until your pesto is
+                                    smooth. Season the pesto with a squeeze of lemon juice, and more salt, if needed.
+                                </li>
+                                <li>Put the bacon in a small, cold frying pan and set it over a medium–high heat. Cook
+                                    for 4–5 minutes, or until the bacon is crispy. Remove from the pan with a slotted
+                                    spoon and drain on kitchen paper. </li>
+                                <li>Cook the gnocchi in a large pan of boiling water according to the packet
+                                    instructions. They are done when the gnocchi float to the top. Drain and return to
+                                    the pan.</li>
+                                <li>Stir in the pesto and bacon and serve. </li>
+                            </ol>
                         </div>
-                        <label for="expand-checkbox-pesto-gnocchi" id="expand-checkbox-label">Expand/Hide</label>
+                        <label for="expand-checkbox-pesto-gnocchi" id="expand-checkbox-label">Expland/Hide</label>
                     </aside>
-                    <aside class="" id="recipe-item">
-                        <h2>Aside</h2>
-                        <img src="" alt="">
-                        <input type="checkbox" id="expand-checkbox-()">
-                        <div class="recipe-content-()">
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam, quaerat temporibus?
-                                Vitae rem illo dolor, recusandae nemo rerum molestiae aliquid? Laudantium, saepe
-                                officiis optio nesciunt fugiat suscipit tenetur voluptates dolor!</p>
+
+                    <aside class="stir-fry" id="recipe-item">
+                        <h2>Chilli Bean Stir-Fry</h2>
+                        <img src="./assets/images/chilli_bean_stir-fry_19412_16x9.jpg"
+                            alt="An image of a bowl of Chilli Bean Stir-Fry.">
+                        <input type="checkbox" id="expand-checkbox-stir-fry">
+                        <div class="recipe-content-stir-fry">
+                            <p>Dr Rupy shows us how to make a budget-friendly, nutritious meal for two. This chilli bean
+                                stir-fry costs just over £1 per portion and will be on the table in 30 minutes or less.
+                            </p>
+                            <p> Each serving provides 436 kcal, 19g protein, 58g carbohydrate (of which 16g sugars), 9g
+                                fat (of which 1.5g saturates), 20g fibre and 2.5g salt. </p>
+                            <ul>
+                                <li>1 nest wholewheat noodles (approx. 60g/2¼oz)</li>
+                                <li>1 red chilli, roughly chopped</li>
+                                <li>20g/¾oz piece fresh root ginger, roughly chopped</li>
+                                <li>2 garlic cloves</li>
+                                <li>2 tbsp light soy sauce</li>
+                                <li>1 tbsp white wine vinegar</li>
+                                <li>2 tsp brown sugar</li>
+                                <li>1 tsp sesame oil</li>
+                                <li>1 tbsp olive oil</li>
+                                <li>200g/7oz green beans, trimmed and halved</li>
+                                <li>150g/5½oz broccoli, broken into small florets, stalks thinly sliced</li>
+                                <li>1 red onion, thinly sliced</li>
+                                <li>400g tin black beans, drained</li>
+                            </ul>
+                            <h3>Method</h3>
+                            <ol>
+                                <li>Bring a saucepan of water to the boil, add the noodles and cook for 4 minutes or
+                                    until cooked. Drain, rinse under cold water and set aside.</li>
+                                <li>Put the chilli, ginger and garlic into a jug with the soy sauce, vinegar, sugar and
+                                    sesame oil. Blend until smooth with a stick blender, then set aside. If you don’t
+                                    have a stick blender, you can pound the ingredients together with a pestle and
+                                    mortar.</li>
+                                <li>Heat the olive oil in a wok or large frying pan over a high heat, then add the green
+                                    beans, broccoli and onion. Stir-fry for 2–3 minutes, until the beans and onions are
+                                    lightly charred.</li>
+                                <li>Add the cooked noodles, black beans and the sauce and fry together for a further
+                                    minute. Divide between 2 warmed bowls and serve.</li>
+                            </ol>
+
+
                         </div>
-                        <label for="expand-checkbox-()" id="expand-checkbox-label">Expand/Hide</label>
+                        <label for="expand-checkbox-stir-fry" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
 
 
-                    <aside class="" id="recipe-item">
-                        <h2>Aside</h2>
-                        <img src="" alt="">
-                        <input type="checkbox" id="expand-checkbox-()">
-                        <div class="recipe-content-()">
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo quis, explicabo
-                                reprehenderit, rem iure non asperiores, minima et ipsam voluptate ea inventore
-                                exercitationem delectus blanditiis necessitatibus. Deleniti nihil natus animi.</p>
+                    <aside class="kimchi" id="recipe-item">
+                        <h2>Kimchi Fried Rice</h2>
+                        <img src="./assets/images/kimchi_fried_rice_03887_16x9.jpg"
+                            alt="An image of a bowl of Kimchi Fried Rice.">
+                        <input type="checkbox" id="expand-checkbox-kimchi">
+                        <div class="recipe-content-kimchi">
+                            <p>Looking for a simple, tasty dinner? Kimchi fried rice makes great use of store cupboard
+                                ingredients and is packed with flavour thanks to a spicy kick from kimchi and gochujang.
+                            </p>
+                            <ul>
+                                <li>1 free-range egg, beaten, plus 2–3 fried eggs, to serve (optional)</li>
+                                <li>1–2 garlic cloves, finely chopped</li>
+                                <li>3cm/1¼in fresh root ginger, peeled and finely chopped</li>
+                                <li>2 frankfurters (optional), sliced</li>
+                                <li>100g/3½oz kimchi, roughly chopped </li>
+                                <li>handful frozen peas</li>
+                                <li>250–300g/9–10½oz cooked and cooled Korean, jasmine or basmati rice</li>
+                                <li>1 tbsp vegetable oil</li>
+                                <li>2½ tsp toasted sesame oil </li>
+                                <li>1 tsp sesame seeds, to garnish</li>
+                                <li>1 spring onion, finely sliced, to garnish</li>
+                            </ul>
+                            <h3>For the spicy sauce</h3>
+                            <ul>
+                                <li>1 tbsp gochujang (Korean fermented chilli paste)</li>
+                                <li>1 tbsp kimchi pickling liquid</li>
+                                <li>½ tbsp tomato ketchup</li>
+                                <li>1 tbsp light soy sauce</li>
+                                <li>¼ tsp sugar</li>
+                                <li>1 tsp sesame oil</li>
+                            </ul>
+                            <h3>Method</h3>
+                            <ol>
+                                <li>Get all your ingredients prepared and lay them out close to the hob. This recipe is
+                                    cooked quickly and it really helps to have everything close at hand. </li>
+                                <li>To make the sauce, mix all of the ingredients together in a small bowl. </li>
+                                <li>Heat the vegetable oil in a wok over a high heat and, once smoking hot, pour in the
+                                    beaten egg and swirl around the wok. Stir-fry for 1–2 minutes until crisp but not
+                                    burnt, then push aside. </li>
+                                <li>Add the garlic and ginger, stir-fry for 30 seconds then add the frankfurter.</li>
+                                <li>Stir in the kimchi, peas and rice, stir-frying each for 30 seconds before adding the
+                                    next. Separate out the rice well by pressing into any clumps with a spatula and
+                                    continue to cook through for 3–4 minutes before pouring the sauce evenly over the
+                                    rice. </li>
+                                <li>Stir-fry for a further 1–2 minutes – once the rice has absorbed all of the liquid,
+                                    it is ready to be served. Stir in the sesame oil, sprinkle with the sesame seeds and
+                                    spring onions and serve. If desired, top the rice with a fried egg. If frying the
+                                    egg in the wok, fry the egg sunny-side up with a crispy base for a bit of added
+                                    texture.</li>
+                            </ol>
                         </div>
-                        <label for="expand-checkbox-()" id="expand-checkbox-label">Expand/Hide</label>
+                        <label for="expand-checkbox-kimchi" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
                     <aside class="" id="recipe-item">
                         <h2>Aside</h2>
