all recipies added for dinner page

--- a/breakfast-recipies.html
+++ b/breakfast-recipies.html
@@ -46,6 +46,7 @@
                         <h2>Banana and Banana Pancakes</h2>
                         <img src=".//assets/images/banana_pancakes_62919_16x9.jpg"
                             alt="An image of a plate full of banana pancakes.">
+                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
                         <input type="checkbox" id="expand-checkbox-pancakes">
                         <div class="recipe-content-pancakes">
                             <p>These quick and easy banana pancakes are dairy-free and egg-free. Mashed banana is an egg
@@ -95,6 +96,7 @@
                         <h2>Fried bacon with poached egg and tomatoes</h2>
                         <img src="./assets/images/pan-fried_bacon_with_76907_16x9.jpg"
                             alt="An image of a place with eggs and bacon on it.">
+                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
                         <input type="checkbox" id="expand-checkbox-bacon-and-eggs">
                         <div class="recipe-content-bacon-and-eggs">
                             <p>You don’t have to give up your bacon and eggs when you’re dieting – just slightly change
@@ -154,6 +156,7 @@
                         <h2>Blueberry Overnight Oats</h2>
                         <img src="./assets/images/overnight_muesli_with_57876_16x9.jpg"
                             alt="An image of bowl containing overnight oats.">
+                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
                         <input type="checkbox" id="expand-checkbox-oats">
                         <div class="recipe-content-oats">
                             <p>Prepare this blueberry and apple overnight oats recipe for a super-quick and tasty
@@ -189,6 +192,7 @@
                         <h2>All-day breakfast frittata</h2>
                         <img src="./assets/images/all-day_breakfast_12416_16x9.jpg"
                             alt="An image of plate of a breakfast frittata.">
+                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
                         <input type="checkbox" id="expand-checkbox-frittata">
                         <div class="recipe-content-frittata">
                             <p>We’ve packed loads of extra veggies into this easy frittata so you can get the jump on
@@ -262,6 +266,7 @@
                         <h2>Blueberry Ricotta Pot</h2>
                         <img src="./assets/images/ricotta_pots_with_13643_16x9.jpg"
                             alt="An image of blueberry ricotta pot.">
+                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
                         <input type="checkbox" id="expand-checkbox-ricotta">
                         <div class="recipe-content-ricotta">
                             <p>Ricotta is eaten for breakfast in Italy and also works well as a snack. Cinnamon adds
@@ -304,6 +309,7 @@
                         <h2>Breakfast Quesadillas (V)</h2>
                         <img src="./assets/images/breakfast_quesadillas_82028_16x9.jpg"
                             alt="An image of a breakfast quesadilla on a cutting board.">
+                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
                         <input type="checkbox" id="expand-checkbox-quesadilla">
                         <div class="recipe-content-quesadilla">
                             <p>For a leisurely weekend brunch or a light meal any day of the week, these breakfast
