--- a/dinner-recipies.html
+++ b/dinner-recipies.html
@@ -45,6 +45,7 @@
                     <aside class="pesto-gnocchi" id="recipe-item">
                         <h2>Gnocchi with crispy bacon and spinach pesto</h2>
                         <img src="./assets/images/gnocchi_with_crispy_19660_16x9.jpg" alt="">
+                        <figcaption>Image and recipe sourced from BBC Food.</figcaption>
                         <input type="checkbox" id="expand-checkbox-pesto-gnocchi">
                         <div class="recipe-content-pesto-gnocchi">
                             <p>Gnocchi makes an easy-peasy 10-minute dinner. It's so simple to give homemade pesto a
@@ -81,12 +82,13 @@
                         <label for="expand-checkbox-pesto-gnocchi" id="expand-checkbox-label">Expland/Hide</label>
                     </aside>
 
-                    <aside class="stir-fry" id="recipe-item">
+                    <aside class="chilli" id="recipe-item">
                         <h2>Chilli Bean Stir-Fry</h2>
                         <img src="./assets/images/chilli_bean_stir-fry_19412_16x9.jpg"
                             alt="An image of a bowl of Chilli Bean Stir-Fry.">
-                        <input type="checkbox" id="expand-checkbox-stir-fry">
-                        <div class="recipe-content-stir-fry">
+                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <input type="checkbox" id="expand-checkbox-chilli">
+                        <div class="recipe-content-chilli">
                             <p>Dr Rupy shows us how to make a budget-friendly, nutritious meal for two. This chilli bean
                                 stir-fry costs just over £1 per portion and will be on the table in 30 minutes or less.
                             </p>
@@ -121,19 +123,18 @@
                                 <li>Add the cooked noodles, black beans and the sauce and fry together for a further
                                     minute. Divide between 2 warmed bowls and serve.</li>
                             </ol>
-
-
                         </div>
-                        <label for="expand-checkbox-stir-fry" id="expand-checkbox-label">Expand/Hide</label>
+                        <label for="expand-checkbox-chilli" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
 
 
-                    <aside class="kimchi" id="recipe-item">
+                    <aside class="kimchi-fried-rice" id="recipe-item">
                         <h2>Kimchi Fried Rice</h2>
                         <img src="./assets/images/kimchi_fried_rice_03887_16x9.jpg"
                             alt="An image of a bowl of Kimchi Fried Rice.">
-                        <input type="checkbox" id="expand-checkbox-kimchi">
-                        <div class="recipe-content-kimchi">
+                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <input type="checkbox" id="expand-checkbox-kimchi-fried-rice">
+                        <div class="recipe-content-kimchi-fried-rice">
                             <p>Looking for a simple, tasty dinner? Kimchi fried rice makes great use of store cupboard
                                 ingredients and is packed with flavour thanks to a spicy kick from kimchi and gochujang.
                             </p>
@@ -179,40 +180,128 @@
                                     texture.</li>
                             </ol>
                         </div>
-                        <label for="expand-checkbox-kimchi" id="expand-checkbox-label">Expand/Hide</label>
+                        <label for="expand-checkbox-kimchi-fried-rice" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
-                    <aside class="" id="recipe-item">
-                        <h2>Aside</h2>
-                        <img src="" alt="">
-                        <input type="checkbox" id="expand-checkbox-()">
-                        <div class="recipe-content-()">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis esse voluptates odio odit
-                                perspiciatis reiciendis in vitae distinctio similique sit ea nisi, fugit neque. Quod
-                                nisi nobis iste vitae dolorem.</p>
+                    <aside class="sausage-bake" id="recipe-item">
+                        <h2>Air fryer sausage bake</h2>
+                        <img src="./assets/images/air_fryer_sausage_bake_35909_16x9.jpg"
+                            alt="An image of a cutting board with sausage bake on it.">
+                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <input type="checkbox" id="expand-checkbox-sausage-bake">
+                        <div class="recipe-content-sausage-bake">
+                            <p>This air fryer sausage bake is a super speedy all-in-one meal, perfect for weeknights
+                                when you're low on time and energy.</p>
+                            <h3>Ingredients</h3>
+                            <ul>
+                                <li>1 red onion, quartered, or 1 leek, cut into pieces</li>
+                                <li>1 red pepper, seeds removed and cut into chunks</li>
+                                <li>180g/6¼oz cherry tomatoes</li>
+                                <li>1 courgette, cut into 2cm/¾in chunks</li>
+                                <li>olive oil spray</li>
+                                <li>150ml/5fl oz chicken stock</li>
+                                <li>2 tbsp tomato purée</li>
+                                <li>4 medium potatoes (about 400g/14oz in total), scrubbed and sliced into 1cm/½in thick
+                                    wedges</li>
+                                <li>8 pork sausages</li>
+                                <li>handful basil leaves, to garnish (optional)</li>
+                            </ul>
+                            <h3>Method</h3>
+                            <ol>
+                                <li>Heat the air fryer to 190C. Place the onion, pepper, cherry tomatoes and courgette
+                                    in a container that will fit in the air fryer (see Recipe Tip) and spray with olive
+                                    oil.</li>
+                                <li>Roast for 10 minutes, then mix together the stock and tomato purée in a jug and pour
+                                    this over the vegetables. Return to the air fryer for 5 minutes then set aside.</li>
+                                <li>Toss the potato wedges in a few sprays of olive oil. Place in a lined basket of the
+                                    air fryer and cook for 12 minutes. Remove and shake the pan or turn the potatoes,
+                                    then top with the sausages. Cook for 10 minutes or until done, turning after 6
+                                    minutes. (If the air fryer basket is smaller, do this in two batches.) </li>
+                                <li>Combine the vegetables and the sausage mixture and return to the air fryer for 2
+                                    minutes to heat through. Spoon the sausage bake into a serving dish and top with the
+                                    basil leaves, if using. Serve immediately. </li>
+                            </ol>
                         </div>
-                        <label for="expand-checkbox-()" id="expand-checkbox-label">Expand/Hide</label>
+                        <label for="expand-checkbox-sausage-bake" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
-                    <aside class="" id="recipe-item">
-                        <h2>Aside</h2>
-                        <img src="" alt="">
-                        <input type="checkbox" id="expand-checkbox-()">
-                        <div class="recipe-content-()">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni sint nulla repudiandae,
-                                natus dolores quae omnis dolor consequuntur tenetur quaerat sequi? Quas, accusantium
-                                error! Nobis expedita ullam ducimus velit quis!</p>
+                    <aside class="broccoli-pesto-spaghetti" id="recipe-item">
+                        <h2>Spaghetti with broccoli pesto</h2>
+                        <img src="./assets/images/spaghetti_with_broccoli_82791_16x9.jpg"
+                            alt="An image og a bowl of Broccoli and Pesto Spaghetti.">
+                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <input type="checkbox" id="expand-checkbox-broccoli-pesto-spaghetti">
+                        <div class="recipe-content-broccoli-pesto-spaghetti">
+                            <p>Boost your five-a-day by swapping pine nuts for broccoli in this tangy broccoli pesto
+                                pasta. It’s ideal as a quick midweek supper that even the kids will eat.</p>
+                            <p> Equipment and preparation: You will need a food processor for this recipe. </p>
+                            <h3>Ingredients</h3>
+                            <ul>
+                                <li>300g/10½oz dried spaghetti</li>
+                                <li>350g/12oz broccoli (about one head), broken into florets and stem chopped</li>
+                                <li>30g/1oz fresh basil leaves and stems</li>
+                                <li>30g/1oz Parmesan, finely grated, plus extra to garnish (or similar vegetarian hard
+                                    cheese)</li>
+                                <li>½ garlic clove, finely grated</li>
+                                <li>3 tbsp olive oil</li>
+                                <li>1 tbsp lemon juice</li>
+                                <li>salt and freshly ground black pepper</li>
+                            </ul>
+                            <h3>Method</h3>
+                            <ol>
+                                <li>Cook the spaghetti in a large saucepan of boiling salted water according to the
+                                    packet instructions.</li>
+                                <li>Meanwhile, steam the broccoli over a pan of boiling water for 6 minutes, until it
+                                    starts to soften but is still a vivid green. </li>
+                                <li>Place the broccoli in a food processor bowl, add the basil, Parmesan, garlic, olive
+                                    oil and lemon juice and pulse until just blended. Taste and season with salt and
+                                    freshly ground black pepper. </li>
+                                <li>Drain the pasta and return to the pan, then add the pesto and stir through to
+                                    combine. </li>
+                                <li>Serve with some extra Parmesan grated over the top. </li>
+                            </ol>
                         </div>
-                        <label for="expand-checkbox-()" id="expand-checkbox-label">Expand/Hide</label>
+                        <label for="expand-checkbox-broccoli-pesto-spaghetti"
+                            id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
-                    <aside class="" id="recipe-item">
-                        <h2>Aside</h2>
-                        <img src="" alt="">
-                        <input type="checkbox" id="expand-checkbox-()">
-                        <div class="recipe-content-()">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores sit, quidem voluptate
-                                dolores consectetur praesentium est? Voluptatum error voluptate iste officia ipsum sequi
-                                enim itaque! Sunt, reiciendis architecto? Voluptatem, error!</p>
+                    <aside class="korean-pancakes" id="recipe-item">
+                        <h2>Korean-style crispy vegetable pancakes</h2>
+                        <img src="./assets/images/yachaejeon_korean_crispy_55746_16x9.jpg"
+                            alt="An image of a plate of Korean Pancakes.">
+                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <input type="checkbox" id="expand-checkbox-korean-pancakes">
+                        <div class="recipe-content-korean-pancakes">
+                            <p>Yachaejeon are delicious vegan crispy vegetable pancakes, made here with a quick tamari
+                                dipping sauce. They’re quick, easy and can be adapted with whatever veg you have to
+                                hand. </p>
+                            <h3>Ingredients</h3>
+                            <ul>
+                                <li>125g/4½oz gluten-free plain flour</li>
+                                <li>200g/7oz frozen spinach leaves, defrosted</li>
+                                <li>1 red pepper, seeds removed and finely sliced</li>
+                                <li>1 carrot, peeled and cut into matchsticks</li>
+                                <li>6 spring onions, halved and bashed</li>
+                                <li>1 bunch chives, roughly chopped</li>
+                                <li>1 green chilli, thinly sliced</li>
+                                <li>2 tbsp rapeseed or olive oil</li>
+                                <li>salt</li>
+                            </ul>
+                            <h3>Method</h3>
+                            <ol>
+                                <li>Tip the flour and a pinch of salt into a large bowl, then whisk in 125ml/4fl oz
+                                    water to create a smooth batter. Put the spinach in a clean tea towel or a few
+                                    sheets of kitchen paper and squeeze out as much liquid as possible, then add to the
+                                    batter. Tip in the remaining vegetables, chives and chilli and toss everything
+                                    together.</li>
+                                <li>Heat ½ tablespoon oil in a non-stick frying pan over a medium heat. Add a quarter of
+                                    the vegetable mixture and spread out in an even layer. Cook gently for 3–4 minutes
+                                    until the underside is crisp and golden. Carefully flip the pancake over and cook
+                                    for a further 3 minutes. Keep the pancake warm whilst you repeat with the remaining
+                                    oil and the vegetable mixture.</li>
+                                <li>Combine the dipping sauce ingredients in a small bowl and serve with the pancakes.
+                                </li>
+                            </ol>
+
                         </div>
-                        <label for="expand-checkbox-()" id="expand-checkbox-label">Expand/Hide</label>
+                        <label for="expand-checkbox-korean-pancakes" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
                 </div>
             </div>
