--- a/lunch-recipies.html
+++ b/lunch-recipies.html
@@ -46,6 +46,7 @@
                         <h2>Caesar Salad</h2>
                         <img src="./assets/images/easy_caesar_salad_64317_16x9.jpg"
                             alt="An image of a plate with a caesar salad on it.">
+                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
                         <input type="checkbox" id="expand-checkbox-caesar-salad">
                         <div class="recipe-content-caesar-salad">
                             <p>This recipe delivers on all the Caesar flavour you’re craving, but with less effort and
@@ -91,6 +92,7 @@
                         <h2>Halloumi Wrap</h2>
                         <img src="./assets/images/easy_halloumi_wrap_57379_16x9.jpg"
                             alt="An image of a plate with a halloumi wrap on it.">
+                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
                         <input type="checkbox" id="expand-checkbox-halloumi-wrap">
                         <div class="recipe-content-halloumi-wrap">
                             <p>Once you know how to cook golden, crispy halloumi, the options are endless, but pairing
@@ -131,6 +133,7 @@
                         <h2>Tuna Bean Salad</h2>
                         <img src="/assets/images/tuna_bean_salad_54783_16x9.jpg"
                             alt="An image of a plate of tuna bean salad.">
+                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
                         <input type="checkbox" id="expand-checkbox-tuna-bean">
                         <div class="recipe-content-tuna-bean">
                             <p>Similar to a tuna Nicoise, this salad has the addition of canned beans for extra fibre.
@@ -172,6 +175,7 @@
                     <aside class="pizza-toast" id="recipe-item">
                         <h2>Pizza on Toast</h2>
                         <img src="./assets/images/pizza_on_toast_09337_16x9.jpg" alt="An oven tray of pizza on toast.">
+                        <figcaption>Image and recipe sourced from BBC Food.</figcaption>
                         <input type="checkbox" id="expand-checkbox-pizza-toast">
                         <div class="recipe-content-pizza-toast">
                             <p>Cheese on toast meets pizza in this easy peasy cheesy recipe – add whatever toppings take
@@ -200,6 +204,7 @@
                         <h2>Cheese, Tomato and pesto toastie</h2>
                         <img src="./assets/images/cheese_tomato_and_pesto_42396_16x9.jpg"
                             alt="An image of a place with a cheese, tomato and pesto toatie on it.">
+                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
                         <input type="checkbox" id="expand-checkbox-cheese-toastie">
                         <div class="recipe-content-cheese-toastie">
                             <p>This clever toastie recipe uses up slightly stale bread, the last chunk of cheese and the
@@ -222,6 +227,7 @@
                         <h2>Vegan Noodle Soup (VE)</h2>
                         <img src="./assets/images/vegan_noodle_soup_84779_16x9.jpg"
                             alt="An image of a bowl of vegan noodle soup.">
+                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
                         <input type="checkbox" id="expand-checkbox-noodle-soup">
                         <div class="recipe-content-noodle-soup">
                             <p>If you’re on a tight budget, or just want something really easy and quick for dinner,
